# ime-neovim

./: Cargo.toml  README.md
autoload/: ime.vim
autoload/ime/: rpc.vim
plugin/: ime.vim
src/: lib.rs  path.rs  utility.rs
src/data/: mod.rs  persistent_trie.rs  trie.rs
src/engine/: base.rs  candidate.rs  engine.rs  keymap.rs  mod.rs
src/engine/codetable/: code_table.rs  input_context.rs  mod.rs
src/engine/pinyin/: assist_code.rs  codes.rs  mod.rs  pinyin.rs  scheme.rs
src/output/: mod.rs  protocol.rs  tree.rs
src/plugin/: context_box.rs  mod.rs  plugin.rs
src/vim/: connector.rs  mod.rs  model.rs  vim.rs
src/vim/handlers/: backspace_handler.rs  cancel_handler.rs  initialize_handler.rs  input_char_handler.rs  mod.rs  start_context_handler.rs
