[package]
name = "ime-neovim"
version = "0.1.0"
authors = ["Hawtian Wang <twistoy.wang@gmail.com>"]
edition = "2018"

[lib]
name = "ime"
path = "src/lib.rs"

[[bin]]
name = "ime"
path = "src/bin/main.rs"

[dependencies]
plist = "1.0.0"
serde = { version = "1.0.106", features = ["derive"] }
dirs = "2.0.2"
serde_json = "1.0.51"
log4rs = "0.11.0"
log = "0.4.8"
rmpv = { version = "0.4.4", features = ["with-serde"] }

